--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
       <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a routerLink="home" class="nav-link">
               <i class="nav-icon fas fa-home"></i>
               <p>
                 Inicio
@@ -21,7 +21,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a routerLink="nosotros" class="nav-link">
               <i class="nav-icon fas fa-users"></i>
               <p>
                 Nosotros
