--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -18,7 +18,7 @@
                               <td>{{empleado.apellidoPaterno}} {{empleado.apellidoMaterno}} {{empleado.nombre}}</td>
                               <td>{{empleado.puesto.nombre}}</td>
                               <td>{{empleado.jefe.apellidoPaterno}} {{empleado.jefe.apellidoMaterno}} {{empleado.jefe.nombre}}</td>
-                              <td><button type="button"
+                              <td><button [routerLink]="['/formulario', empleado.id]" type="button"
                                 class="btn btn-info btn-sm mr-1" title="Actualizar"><i
                                     class="fas fa-stream"></i></button></td>
                           </tr>
