--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,12 @@
 <div class="row">
   <div class="col-12">
       <div class="card">
-              <div class="table-responsive">
+        <div class="col-md-12 mt-3">
+          <div class="col-md-12">
+              <button [routerLink]="['/alta']" type="submit" class="btn btn-success float-right" >Agregar</button>
+          </div>
+      </div>
+              <div class="table-responsive mt-3">
                   <table id="mainTable" class="table editable-table table-bordered table-striped m-b-0">
                       <thead>
                           <tr>
